<resources>
    <string name="app_name">My Library</string>
    <string name="bookNameError">Enter book name.</string>
    <string name="authorNameError">Enter author name.</string>
    <string name="pagesNumError">Enter book pages number.</string>
    <string name="publicationYearError">Enter book publication year name.</string>
    <string name="bookId">Book Number:</string>
    <string name="bookName">Book name:</string>
    <string name="bookAuthor">Author:</string>
    <string name="publicationYear">Publication Year:</string>
    <string name="bookPages">Pages:</string>
    <string name="edit_notes">Add/Edit Notes</string>
    <string name="moreDetails">More Details</string>
    <string name="bookNameHint">Book Name…</string>
    <string name="authorNameHint">Author Name…</string>
    <string name="publicationYearHint">Publication Year…</string>
    <string name="numberOfPages">Number Of Pages</string>
    <string name="addBook">Add Book</string>
    <string name="tab">\t\t\t\t</string>
    <string name="isReadingError">Select One Of The Options</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="already_read">Already Read</string>
    <string name="on_my_wishlist">On My Wishlist</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="notes_hint">My Notes…</string>
    <string name="developed_by_siraj">Developed by Siraj</string>
    <string name="finished_reading">Finished Reading</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="are_you_reading_this_book">Are You Reading This Book?</string>
    <string name="add_to_favorites_first_letter_caps">Add To Favorites</string>
    <string name="see_all_books">See All Books</string>
    <string name="currently_reading_books">Currently Reading Books</string>
    <string name="already_read_books">Already Read Books</string>
    <string name="your_wishlist">Your Wishlist</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="select_all">Select All</string>
    <string name="checked_number_to_delete">(0)</string>
    <string name="cancel">Cancel</string>
    <string name="unselect_all">Unselect All</string>
    <string name="search">Search</string>
    <string name="all_books_with_colon">All Books:</string>
    <string name="textview">TextView</string>
    <string name="currently_reading_with_colon">Currently Reading:</string>
    <string name="finished_reading_with_colon">Finished Reading:</string>
    <string name="on_my_wishlist_with_colon">On My Wishlist:</string>
    <string name="my_favorites_with_colon">My Favorites:</string>
    <string name="pages_read_with_colon">Pages read:</string>
    <string name="my_library_statistics">My library Statistics</string>
    <string name="add_note">Add Note</string>
    <string name="book_image">Book Image</string>
    <string name="select_image">Select Image</string>
    <string name="add_to_favorites_question">Add To Favorites?</string>
    <string name="select_option">Select Option</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="empty_space">\u0020</string>
    <string name="add_notes_with_colon">Add Notes:</string>
    <string name="app_image">App Image</string>
    <string name="floating_to_add_book">Floating to add book</string>
    <string name="statistics">Statistics</string>
    <string name="delete_book">Delete Book</string>
    <string name="notes_with_colon">Notes:</string>
    <string name="floating_to_go_up">floating to go up</string>
    <string name="change_book_image">Change Book Image</string>
    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="date_added">Date Added</string>
    <string name="cancel_permissions">Cancel Permissions</string>
    <string name="statistics_permission">Statistics Permission</string>
    <string name="Stat_permission_message"><![CDATA[Allow My Library to access information such as length and frequency of application usage as well as geographical region.\nYou can cancel permission at anytime from menu -> cancel permissions]]></string>
    <string name="deny">deny</string>
    <string name="allow">allow</string>
    <string name="permission_check_box">Don\'t show this message again</string>
</resources>