<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/az"
                android:title="@string/a_z" />
            <item
                android:id="@+id/za"
                android:title="@string/z_a" />
            <item
                android:id="@+id/dateAdded"
                android:title="@string/date_added" />
        </menu>
    </item>

</menu>