<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sirajsaleem.my_library.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAllBooks"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/see_all_books"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCurrentlyReading"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currently_reading_books"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btnAllBooks"
        app:layout_constraintStart_toStartOf="@+id/btnAllBooks"
        app:layout_constraintTop_toBottomOf="@+id/btnAllBooks" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAlreadyRead"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_read_books"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btnCurrentlyReading"
        app:layout_constraintStart_toStartOf="@+id/btnCurrentlyReading"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWishlist"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_wishlist"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btnAlreadyRead"
        app:layout_constraintStart_toStartOf="@+id/btnAlreadyRead"
        app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavorite"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/favorites"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btnWishlist"
        app:layout_constraintStart_toStartOf="@+id/btnWishlist"
        app:layout_constraintTop_toBottomOf="@+id/btnWishlist" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAbout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/statistics"
        app:layout_constraintStart_toStartOf="@+id/statistics"
        app:layout_constraintTop_toBottomOf="@+id/statistics" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="147dp"
        android:layout_height="139dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_image"
        android:src="@mipmap/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/developed_by_siraj"
        android:textColor="@color/metalic_black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/floating_to_add_book"
        android:elevation="10dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/purple_200"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/statistics"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/statistics"
        android:textAllCaps="false"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btnFavorite"
        app:layout_constraintStart_toStartOf="@+id/btnFavorite"
        app:layout_constraintTop_toBottomOf="@+id/btnFavorite" />


</androidx.constraintlayout.widget.ConstraintLayout>