<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/permissionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/statistics_permission"
        android:textColor="@color/metalic_black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permissionMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Stat_permission_message"
        android:textColor="@color/metalic_black"
        app:layout_constraintStart_toStartOf="@+id/permissionTitle"
        app:layout_constraintTop_toBottomOf="@+id/permissionTitle"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/denyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:paddingBottom="10dp"
        android:text="@string/deny"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/allowTxt"
        app:layout_constraintTop_toTopOf="@+id/allowTxt" />

    <TextView
        android:id="@+id/allowTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/allow"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionCheckBox" />

    <CheckBox
        android:id="@+id/permissionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/permission_check_box"
        android:textColor="@color/metalic_black"
        app:layout_constraintStart_toStartOf="@+id/permissionMessage"
        app:layout_constraintTop_toBottomOf="@+id/permissionMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>